allaboutsecurity/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: allaboutsecurity
  namespace: allaboutsecurity
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  tls:
    - secretName: allaboutsecurity-tls
      hosts:
        - allaboutsecurity.xyz
  rules:
    - host: allaboutsecurity.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: allaboutsecurity
                port:
                  number: 80
